[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = popstar
description = Simulates simple stellar populations.
long_description = This packages simulates simple stellar populations for both resolved and unresolved clusters.
author = Jessica R. Lu
author_email = jessica.lu@hawaii.edu
license = BSD
url = http://astropy.org/
edit_on_github = True
github_project = astropy/PopStar

[entry_points]
astropy-package-template-example = popstar.example_mod:main