[metadata]
name = spisea
author = Matthew Hosek Jr., Jessica Lu, Casey Lam, Abhimat Gautam, Kelly Lockhart, Dongwon Kim, Siyao Jia
author_email = mwhosek@astro.ucla.edu
license = GNU GPL v3+
license_file = licenses/LICENSE.rst
url = https://github.com/astropy/SPISEA
description = SPISEA is an python package that generates single-age, single-metallicity populations (i.e. star clusters).
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = astropy/astropy

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    astropy
    pysynphot
    scipy
    numpy
    matplotlib

[options.entry_points]
console_scripts =
    astropy-package-template-example = packagename.example_mod:main

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
spisea = data/*

[tool:pytest]
testpaths = "spisea" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
#addopts = --doctest-rst

[coverage:run]
omit =
    spisea/_astropy_init*
    spisea/conftest.py
    spisea/*setup_package*
    spisea/tests/*
    spisea/*/tests/*
    spisea/extern/*
    spisea/version*
    */spisea/_astropy_init*
    */spisea/conftest.py
    */spisea/*setup_package*
    */spisea/tests/*
    */spisea/*/tests/*
    */spisea/extern/*
    */spisea/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
